* added create_presenter(presenter_type, options ...)
* AggregationResult.levels is a new dictionary containing levels that the
  result was drilled down to. Keys are dimension names, values are levels.
* AggregationResult.table_rows() output has a new variable `is_base` to denote
  whether the row is base or not in regard to table_rows dimension.

Changes
-------

* Changed string representation of a set cut: now using semicolon ';' as a
  separator instead of a plus symbol '+'
* aggregation browser subclasses should now fill result's `levels` variable
  with `coalesced_drilldown()` output for requested drill-down levels.
* Moved coalesce_drilldown() from star browser to cubes.browser module to be
  reusable by other browsers. Method might be renamed in the future.

Fixes
-----

* fixed ordering bug
* `AggregationResult.table_rows` now works when there is no point cut
* get correct reference in `table_rows` – now works when simple denormalized
  table is used 

0.10
====

Quick Summary
-------------

* Dimension defition can have a "template". For example:

  {
      "name": "contract_date",
      "template": "date"
  }
* added table_rows() and cross_table()
* added simple_model(cube_name, dimension_names, measures)

*Incompatibilities:*  use `create_model()` instead of `Model(**dict)`, if you
  were using just `load_model()`, you are fine.

New Features
------------

* To address issue #8 create_model(dict) was added as replacement for
  Model(**dict). Model() from now on will expect correctly constructed model
  objects. `create_model()` will be able to handle various simplifications and
  defaults during the construction process.
* added `info` attribute to all model objects. It can be used to store custom,
  application or front-end specific information
* preliminary implementation of `cross_table()` (interface might be changed)
* `AggregationResult.table_rows()` - new method that iterates through